[tool.poetry]
name = "leetcode"
version = "0.1.0"
description = ""
authors = ["jp-byte-trading <jacob@byte-trading.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.24.2"

[tool.poetry.group.dev.dependencies]
ruff = "^0.0.261"
isort = "^5.12.0"
black = "^23.3.0"
pytest = "^7.2.2"
mypy = "^1.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
