[tool.poetry]
name = "algorithms"
version = "0.1.0"
description = ""
authors = ["jp-byte-trading <jacob@byte-trading.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
